[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player/GrappleHook.gd" type="Script" id=1]

[node name="GrappleHook" type="Line2D"]
visible = false
width = 3.0
script = ExtResource( 1 )

[connection signal="begin_grapple" from="." to="." method="_on_GrappleHook_begin_grapple"]
[connection signal="end_grapple" from="." to="." method="_on_GrappleHook_end_grapple"]
